# Embedded-Control-Simulation

./: .gitignore  README.md
engine_management_system/: CMakeLists.txt
engine_management_system/src/framework/: manager.h  module_interface.h
gear_display_facade/: CMakeLists.txt  main.cpp
gear_display_facade/src/assembly/: instantiation_gear_display.h
gear_display_facade/src/framework/: manager.h  module_interface.h
gear_display_facade/src/modules/: gear_display_facade.cc
gear_display_facade/src/signals/: signal.h
hydraulic_temp_warning_system/: CMakeLists.txt  main.cc
hydraulic_temp_warning_system/src/utility/: hysteresis.h  increment_timer.h
